<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- App Title -->
    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <!-- Mortgage Principal Amount Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MortgagePrincipalAmountLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:hint="@string/mortgage_principal_amount_hint"
        app:helperText="@string/mortgage_principal_amount_helperText"
        app:startIconDrawable="@drawable/baseline_attach_money_24"
        app:endIconMode="clear_text"

        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/MortgagePrincipalAmountTextInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Interest Rate -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InterestRateLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:hint="@string/interest_rate_hint"
        app:helperText="@string/interest_rate_helperText"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_percent_24"
        app:endIconMode="clear_text"

        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/MortgagePrincipalAmountLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InterestRateTextInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Amortization Period -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AmortizationPeriodLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:hint="@string/amortization_period_hint"
        app:helperText="@string/amortization_period_helperText"
        app:startIconDrawable="@drawable/baseline_access_time_24"
        app:endIconMode="clear_text"

        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/InterestRateLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AmortizationPeriodTextInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- EMI Results -->
    <TextView
        android:id="@+id/EMIResults"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:text=""
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/CalculateButton"
        app:layout_constraintTop_toBottomOf="@+id/AmortizationPeriodLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- Calculate EMI Button -->
    <Button
        android:id="@+id/CalculateButton"

        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"

        android:text="@string/calculate_button_text"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
